@@ -2326,7 +2326,10 @@ void Core::seek(int secs) {
 
 QString Core::seek_cmd(double secs, int mode) {
 	QString s = QString("seek %1 %2").arg(secs).arg(mode);
-	if (MplayerVersion::isMplayer2()) s += " 1"; // hr-seek
+	if (MplayerVersion::isMplayer2()) {
+		//hr-seek
+		if (pref->precise_seeking) s += " 1"; else s += " -1";
+	}
 	return s;
 }
 
